--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,10 +6,10 @@
 
     <display-name>Spring MVC Application</display-name>
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+   <!--  <welcome-file-list>
+        <welcome-file>home.jsp</welcome-file>
     </welcome-file-list>
-
+ -->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>
@@ -22,23 +22,26 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener
-        </listener-class>
+    
+     <!-- Welcome File List -->
+    <welcome-file-list>
+        <welcome-file>emailForm.jsp</welcome-file>
+    </welcome-file-list>
+    
+     <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-
-<!--     <filter>
+<!-- 
+    <filter>
         <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy
-        </filter-class>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-
+    
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> -->
-    
+    </filter-mapping>
+ -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
