--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,4 +2,4 @@ jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
 jdbc.databaseurl=jdbc:mysql://localhost:3306/busticketbooking?createDatabaseIfNotExist=true&useSSL=false
 jdbc.username=root
-jdbc.password=exol1485
+jdbc.password=Sisterpyae@112487
