--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,12 @@
 			<version>5.0.0.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.0.0.RELEASE</version>
+		</dependency>
+
 		<!-- Java Mail Dependency -->
 		<dependency>
 			<groupId>javax.mail</groupId>
